<resources>
    <string name="app_name">KIKIMIRU</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="word">word: </string>
    <string name="hint">any words</string>
    <string name="post">post data</string>
    <string name="browser">browser</string>
    <string name="setting_button">設定</string>
    <string name="end">終了</string>
    <string name="alertLevel_default">アラートレベル：</string>
    <string name="alertLevel_one">アラートレベル：1</string>
    <string name="alertLevel_two">アラートレベル：2</string>
    <string name="alertLevel_three">アラートレベル：3</string>
    <string name="setting_title">アラートレベルの設定\n手技の経験量により選択</string>
    <string name="alert_one">レベル1：経験量・低</string>
    <string name="alert_two">レベル2：経験量・中</string>
    <string name="alert_three">レベル3：経験量・高</string>
    <string name="mark_level1">穿刺部位は腸骨\n(上後腸骨棘)です</string>
    <string name="mark_level2">穿刺針の長さは麻酔針で\n調整します</string>
    <string name="mark_level3">抗血小板剤、抗凝固剤の内服は\nありませんか</string>
    <string name="spinal_level1_1">左右腸骨稜上縁を\n結ぶ線(ヤコビー線)が交差する\n第4腰椎を目安に\n第3～4または第4～5の\n腰椎間腔から穿刺します</string>
    <string name="spinal_level1_2">体勢は、おへそを見るように\n首を曲げて\n膝を抱え、えびのように\n身体を丸めます</string>
    <string name="spinal_level3">抗血小板剤、抗凝固剤の内服は\nありませんか</string>
    <string name="central_catheter_in_level1">鎖骨下動脈を穿刺しないように\n針は寝かせます</string>
    <string name="central_catheter_in_level3">抗血小板剤、抗凝固剤の内服は\nありませんか</string>
    <string name="blood_cl_bottle_level3">血液培養は2セット採取です</string>
    <string name="iryo_name_default">医療行為：</string>
    <string name="iryo_now_recognition">医療行為：認識中</string>
    <string name="iryo_now_recognition_anew">医療行為：再認識中</string>
    <string name="iryo_name_Kotuzuisennsi">医療行為：骨髄穿刺</string>
    <string name="iryo_name_CatheterSounyuu">医療行為：中心静脈カテーテル挿入</string>
    <string name="iryo_name_YoutuiSensi">医療行為：腰椎穿刺</string>
    <string name="iryo_name_KetuekiBaiyou">医療行為：血液培養</string>
    <string name="explain_run_mode">実行モードの設定</string>
    <string name="run_mode_no_sound_text">mode ①</string>
    <string name="run_mode_sound_text">mode ②</string>
    <string name="run_mode_voice_text">mode ③</string>
</resources>
