<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:keepScreenOn="true"
tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/button_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setting_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_button"
            android:textSize="18sp" />

        <Button
            android:id="@+id/end_button"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/iryou_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_linear"
        android:text="@string/iryo_name_default"
        android:textAlignment="viewStart"
        android:textColor="@color/hud_white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/alert_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iryou_name"
        android:text="@string/alertLevel_default"
        android:textAlignment="textEnd"
        android:textColor="@color/hud_white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/attention_info"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textColor="@color/hud_red"
        android:textSize="22sp" />

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible">

    </FrameLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_gravity="bottom"
        android:gravity="bottom">


        <Button
            android:id="@+id/button_capture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Start"
            android:textSize="20sp"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>