<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/setting_title"
        android:textAlignment="center"
        android:textColor="@color/hud_white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/alert_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/alert_1_switch"
        android:layout_marginStart="11dp"
        android:text="@string/alert_one"
        android:textAlignment="center"
        android:textColor="@color/hud_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/alert_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/alert_one"
        android:layout_centerVertical="true"
        android:text="@string/alert_two"
        android:textAlignment="center"
        android:textColor="@color/hud_white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/alert_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/alert_one"
        android:layout_marginBottom="99dp"
        android:text="@string/alert_three"
        android:textAlignment="center"
        android:textColor="@color/hud_white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="設定" />

    <Switch
        android:id="@+id/alert_1_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="96dp"
        android:checked="false"
        android:text="未選択"
        android:textColor="@color/hud_white"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/alert_2_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/alert_1_switch"
        android:layout_alignTop="@+id/alert_two"
        android:checked="false"
        android:text="未選択"
        android:textColor="@color/hud_white"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/alert_3_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/alert_1_switch"
        android:layout_alignTop="@+id/alert_three"
        android:checked="false"
        android:text="未選択"
        android:textAlignment="viewStart"
        android:textColor="@color/hud_white"
        android:textSize="16sp" />
</RelativeLayout>