<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/explain_run_mode"
            android:textAlignment="center"
            android:textColor="@color/hud_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/run_mode_1_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/run_mode_sound_text"
                android:textAlignment="viewStart"
                android:textColor="@color/hud_white"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/run_mode_1_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:checked="false"
                android:text="未選択"
                android:textAlignment="viewEnd"
                android:textColor="@color/hud_white"
                android:textSize="20sp"
                tools:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/run_mode_1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/run_mode_voice_text"
                android:textAlignment="viewStart"
                android:textColor="@color/hud_white"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/run_mode_2_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="未選択"
                android:textAlignment="viewEnd"
                android:textColor="@color/hud_white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/setting_button"
                android:layout_width="20dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="設定"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>